# messy-napkins

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/agents/: messy-napkin-user.agent.md  model-configurator.agent.md
.github/skills/messy-napkin-user/: SKILL.md
.github/skills/model-configurator/: SKILL.md
.github/skills/model-configurator/assets/: paired-findings-template.md
.github/workflows/: tests.yml
configs/: example-benchmark.json
configs/examples/: README.md  aislop_evaluator.py  create-context-boundary-config.py  example-benchmark.json  qwen3-14b-gguf.json
configs/local/: SANITIZATION.md
docs/hosting/: README.md  lemonade.md  qwen3-14b-gguf.md
src/messy_napkins/: __init__.py  benchmark.py  config.py  provider.py  runner.py
tests/: test_benchmark.py
