[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "messy-napkins"
version = "0.1.0"
description = "A multi-dimensional benchmarking framework for local LLMs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []

[project.scripts]
messy-napkins = "messy_napkins.runner:main"

[tool.setuptools.packages.find]
where = ["src"]
